##########################################################################################
# Program Name :     Discord Bot
# Author       :     DMCTruong
# Last Updated :     August 1, 2017
# License      :     MIT
# Description  :     A general purpose bot written for Discord               
##########################################################################################

08/01/17
- Added MIT License
- Minor additions to Bot.py and configurations.py
- Removed Minecraft-related database commands
- Customized /help command

07/31/17
- Separated the commands in Bot.py into the following files based on functions so it will be easier to maintain
	database.py:	All database/pyrebase related commands
	help.py:		All help/search related commands
	miscellaneous.py:	Miscellaneous text commands
	music.py:		Music channel commands

07/29/17
- Added the following Pyrebase commands:
	/newEntry: User can create a new database in pyrebase. This command can also be used to add entries into existing databases.
	/alldb: This command returns the names of all of the databases that are currently being stored in Pyrebase

07/27/17
- Updated and added more information in configurations.py
- Taught the bot how to sing
	The bot can now join voice channels and play music, though, there are some issues with music buffering.
	Hopefully, the issue with buffering will be fixed soon.

07/26/17
- Added some tutorial in configurations.py
- Added the following commands that are related to Minecraft though it may be used for other things as well
	/show_location_names: The bot returns a list of names of locations from the database
	/add_location: The user can add new locations (name, coordinates)to the database
	/show_location: The bot returns the coordinates of the location that the user specifies from using the command /show_location_names
- The Firebase database now works with Discord Bot

07/25/17
- Removed /test command, it was redundant
- Minor changes to the following commands: 