@@ -1,16 +1,18 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 1, 2017
+# Last Updated :     August 6, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
 
 
 # To do List:
+#	- Add a calculator
+#	- Add a translator: https://pypi.python.org/pypi/googletrans
 #	- Add a tutorial on how to install and get the keys for the configurations
 #	- Add better documentation of the code
-#	- Add a calculator
+#	- Update the /hug command
 #	- Update the README.md
 #	- Return the user's avatar?
 
@@ -18,13 +20,12 @@
 #	- The bot seems to buffer a lot when playing music. 
 #		Hopefully, the issue and a solution will be found soon.
 
-# Also, check this out: https://pypi.python.org/pypi/googletrans
-
 import discord
 from discord.ext import commands
 import asyncio
 import configurations
 import logging
+import sys
 
 from cogs import database
 from cogs import help
@@ -48,4 +49,13 @@ async def on_ready():
 	print("ID Number: " + bot.user.id)
 	print("\nType /help in the Discord chat for the list of commands.")
 	print("=============================================")
+	await bot.change_presence(game=discord.Game(name='/help for commands!'))
+
+@bot.command(pass_context=True)
+async def shutdown():
+	"""Logs the bot off Discord and shuts it down"""
+	await bot.say("Shutting down, see you next time!")
+	await bot.close()
+		
+	
 bot.run(configurations.BOT_TOKEN)
