@@ -1,5 +1,12 @@
 # Discord-Bot
-A general purpose bot created for Discord.
+
+[![Python Version](https://img.shields.io/badge/python-3.5-blue.svg)](https://www.python.org/downloads/release/python-351/)
+
+A general purpose bot created for Discord. The bot can perform basic functions such as play music in voice channels, silly text commands, create and store information into databases.
+
+If you would like to invite the bot to your server, please click the link below!
+
+https://discordapp.com/oauth2/authorize?client_id=343639761900273666&scope=bot
 
 # Requirements
 
@@ -11,8 +18,11 @@ A general purpose bot created for Discord.
 # Installation
 
 1. Download and install the lastest version of Python. Be sure to add Python's path to the Enviromental Variables!
-2. Next, to install Discord.py, open a command line and type: python -m pip install -U .[voice]
-3. Then, install pyrebase by typing the following in a command line: pip install pyrebase
+
+Note: For this next section, if typing python3 does not work, try typing just python.
+
+2. Next, to install Discord.py, open a command line and type: python3 -m pip install -U discord.py[voice]
+3. Then, install pyrebase by typing the following in a command line: python3 pip install pyrebase
 4. Finally, download and install ffmeg
 5. After that, open /docs/configurations.py (preferably with Notepad++ or a similar program)and the tutorials in the file will help you retrieve the information that the bot requires to run.
 6. Once all of the information in the configurations file is filled out, the bot is ready to run, double click Bot.py! For more information on what commands the bot can use, type /help in the Discord chat.
