@@ -1,10 +1,15 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 1, 2017
+# Last Updated :     August 6, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
+
+08/06/17
+- Updated the README, a demo of the bot is now hosted on Cloud9
+- The bot can now posts gifs when the /hug command is used. The gifs are stored on Webhost000
+- Added /shutdown command: Allows user to shutdown the bot from Discord chat
 
 08/01/17
 - Added MIT License
